add property to schema
