# src/controllers/composer.ts
@@ -68,7 +68,9 @@ type ComposerData = {
     tags?: string[],
     thumb?: string,
     noscript?: string,
-    isAnonymous?: boolean
+    isAnonymous?: boolean,
+    translatedContent: string,
+    isEnglish?: boolean
 
 }
 
